Cleaning up a bit, and temporarily disabling a test